# PAMAL

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
api/: auth.py  config.py  policies.py  server.py
audit/: audit_log.py
cli/: pamctl.py
pam_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
rotation/: rotator.py  simulators.py
tests/: conftest.py  test_api.py  test_rotation.py  test_vault.py
vault/: crypto.py  vault_engine.py
workflow/: access_requests.py
